# fed_learning_exploration

./: .gitignore  README.md
classical/: CNN.ipynb  eda.py  model.py  preprocess.py  pyproject.toml
federated/upgraded/flwr_mnist/: __init__.py  client_app.py  server_app.py  task.py
