[project]
name = "classical"
version = "0.1.0"
description = "Neural network for Spotify track analysis using PyTorch"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.17.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "seaborn>=0.13.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["task"]
